whitespace fixes

--- a/stylesheets/finished.css
+++ b/stylesheets/finished.css
@@ -1,22 +1,10 @@
-    h1 {
-        text-align: center;
+table {
+  margin-left: auto;
+  margin-right: auto;
 }
-    h2 {
-        text-align: center;
+table, th, td {
+  border: 1px solid black;
 }
-    h4 {
-        text-align: center;
-}
-    h5 {
-        text-align: center;
-}
-    table {
-        margin-left: auto;
-        margin-right: auto;
-}
-    table, th, td {
-        border: 1px solid black;
-}
-    th, td {
-        text-align:center;
+th, tr, td {
+  text-align:center;
 }
